--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/cors": "^2.8.12",
+		"@types/crypto-js": "^4.0.2",
 		"@types/express": "^4.17.13",
 		"@types/node": "^16.11.7",
 		"cors": "^2.8.5",
+		"crypto-js": "^4.1.1",
 		"dotenv": "^8.6.0",
 		"express": "^4.17.1",
 		"express-graphql": "^0.12.0",
